<resources>
    <string name="app_name">Recycler View App</string>
    <string name="id">Id:</string>
    <string name="id_value">Id value</string>
    <string name="todo_title">Todo Title</string>
    <string name="userid">UserId:</string>
    <string name="user_id_value">User Id Value</string>
    <string name="completed">Completed:</string>
    <string name="completed_status">Completed Status</string>
    <string name="employee_name">Employee Name</string>
    <string name="get_selected_item">Get Selected Item</string>
    <string name="recycler_view_app">Recycler View App</string>
    <string name="normal_recycler_view">Normal Recycler View</string>
    <string name="card_recycler_view">Card Recycler View</string>
    <string name="recycler_view_with_single_selection">Recycler View with Single selection</string>
    <string name="tick_image">Tick Image</string>
    <string name="recycler_view_with_multiple_selection">Recycler View with Multiple Selection</string>
    <string name="get_selected_items">Get Selected Items</string>
    <string name="post_name">Post Name</string>
    <string name="recycler_view_with_swipeable_items">Recycler View with Swipeable Items</string>
    <string name="add_post">Add Post</string>
    <string name="done">Done</string>
    <string name="enter_post_name_here">Enter post name here</string>
    <string name="recycler_view_with_multi_view_type">Recycler View with Multi View Type</string>
    <string name="email_image">email_image</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="nsw">NSW</string>
    <string name="call_image">Call Image</string>
</resources>