<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="10dp"
    app:cardCornerRadius="20dp"
    android:layout_margin="8dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/txtViewTitleCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_title"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/idTextCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/id"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtViewTitleCard" />

        <TextView
            android:id="@+id/txtViewIdCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/id_value"
            app:layout_constraintBaseline_toBaselineOf="@+id/idTextCard"
            app:layout_constraintStart_toEndOf="@+id/idTextCard" />

        <TextView
            android:id="@+id/userIdTextCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/userid"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idTextCard" />

        <TextView
            android:id="@+id/txtViewUserIdCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/user_id_value"
            app:layout_constraintBaseline_toBaselineOf="@+id/userIdTextCard"
            app:layout_constraintStart_toEndOf="@+id/userIdTextCard" />

        <TextView
            android:id="@+id/completedTextCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/completed"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userIdTextCard" />

        <TextView
            android:id="@+id/txtViewCompletedStatusCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/completed_status"
            app:layout_constraintBaseline_toBaselineOf="@+id/completedTextCard"
            app:layout_constraintStart_toEndOf="@+id/completedTextCard" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>